reset button with functionality

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <div>
                 <input type="number" class="num" min="1" max="100">
                 <input type="submit" class="sub">
+                <input type="button" value="Reset" class="reset">
             </div>
             <p id="feedback">ㅤ</p>
         </div>
